modules/istio/gateway/grafana-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: istio-ingress
spec:
  hosts:
    - "grafana.fdk.codes"
  gateways:
    - fdk-codes-gateway
  http:
    - route:
        - destination:
            port:
              number: 80
            host: grafana.monitoring.svc.cluster.local
