modules/istio/gateway/keycloak-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak
  namespace: istio-ingress
spec:
  hosts:
    - "iam.fdk.codes"
  gateways:
    - fdk-codes-gateway
  http:
    - route:
        - destination:
            port:
              number: 80
            host: keycloak-http.keycloak.svc.cluster.local
