modules/istio/gateway/kibana-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kibana
  namespace: istio-ingress
spec:
  hosts:
    - "logs.fdk.codes"
  gateways:
    - fdk-codes-gateway
  http:
    - route:
        - destination:
            port:
              number: 5601
            host: kibana.logging.svc.cluster.local
